# sectordb

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Cargo.toml  README.md  ROADMAP.md  bors.toml
.github/workflows/: ci.yml  elixir.yml  rust.yml
api/: Cargo.toml
sector/: Cargo.toml
sector-api/: Cargo.toml
sector-core/: Cargo.toml  mix.exs
sector-core/lib/: interface_types.ex  native.ex  sector_core.ex
sector-core/lib/sector_core/: interface_types.ex  native.ex
sector-core/lib/sector_core/interface/: column.ex  table.ex
sector-core/native/sector-core/: Cargo.toml  build.rs
sector-core/native/sector-core/src/: malloc.rs
sector-core/native/sector-core/src/grpc/: server.rs
sector-core/native/sector-core/src/interface/: mod.rs
sector-core/native/sector-core/src/sec/: mod.rs
sector-core/native/sector_core/: Cargo.toml
sector-core/native/sector_core/src/: lib.rs
sector-core/native/sector_core/src/cache/: mod.rs
sector-core/native/sector_core/src/interface/: mod.rs  types.rs
sector-core/native/sector_core/src/query/: mod.rs
sector-core/native/sector_core/src/sec/: ast.rs  lexer.rs  mod.rs  parser.rs
sector-core/native/sector_core/src/util/: err.rs
sector-core/src/: lib.rs  malloc.rs
sector-core/src/cache/: mod.rs
sector-core/src/concurrency/: mix.exs
sector-core/src/concurrency/native/sector-concurrency/: Cargo.toml
sector-core/src/concurrency/native/sector-concurrency/src/: lib.rs
sector-core/src/grpc/: mod.rs  server.rs
sector-core/src/grpc/proto/: transaction.proto
sector-core/src/interface/: mod.rs
sector-core/src/sec/: lexer.rs  mod.rs
sector-core/src/util/: err.rs  mod.rs
sector-core/test/: sector_core_test.exs
sector/src/: main.rs
sector/src/util/: mod.rs
