[package]
name = "sector-core"
version = "0.1.0"
edition = "2021"
authors = ["Sector Developers"]
readme = "../../../README.md"

[lib]
name = "sector_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rustler = "0.25.0"
bytemuck = "1.10.0"
bytes = "1.1.0"
chrono = "0.4.19"
concurrent-queue = "1.2.2"
evmap = "10.0.2"
futures = "0.3.21"
once_cell = "1.13.0"
prost = "0.10.4"
rayon = "1.5.3"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
timespan = { version = "0.2.0", features = ["serde"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "sync"] }
tonic = "0.7.2"
uuid = { version = "1.1.2", features = ["serde", "v4"] }

[build-dependencies]
glob = "0.3.0"
tonic-build = "0.7.2"

[dev-dependencies]
pretty_assertions = "1.2.1"
